[project]
name = "nonebot-plugins"
version = "0.1.0"
description = "nonebot2插件仓库"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.uv.workspace]
members = [
    "nonebot_plugin_easy_translate",
    "nonebot_plugin_eop_ai",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
