[project]
name = "nonebot-plugin-easy-translate"
version = "0.2.4"
description = "Nonebot2 谷歌翻译插件"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx[http2]>=0.26.0",
    "nonebot-adapter-onebot>=2.0.0",
    "nonebot2>=2.0.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
