[project]
name = "nonebot-plugin-eop-ai"
version = "0.3.6"
description = "Nonebot2 一款调用eop api的AI聊天插件"
readme = "README.md"
authors = ["nikissXI <1299577815@qq.com>"]
repository = "https://github.com/nikissXI/nonebot_plugins/tree/main/nonebot_plugin_eop_ai"
documentation = "https://github.com/nikissXI/nonebot_plugins/tree/main/nonebot_plugin_eop_ai#README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.10.0",
    "mdx-breakless-lists>=1.0.1",
    "mdx-truly-sane-lists>=1.3",
    "nonebot-adapter-onebot>=2.0.0",
    "nonebot-plugin-htmlrender>=0.3.0",
    "nonebot2>=2.0.0",
]
