[tool.poetry]
name = "nonebot-plugin-mc-status"
version = "0.1.0"
description = "Nonebot2查询JAVA MC服务器在线信息插件"
authors = ["nikissXI <1299577815@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nonebot/"
repository = "https://github.com/nonebot/"
documentation = "https://github.com/nonebot/xx#readme"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0-rc.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
